--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ sentence-transformers==1.2.0
 umap-learn[plot]==0.5.1
 hdbscan==0.8.26
 nltk
+contextualized-topic-models
+torch
+torchvision
+scikit-learn
